style: add color-scheme light only to prevent forced dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,6 @@ img.three-dots:active {
 }
 
 
+:root {
+  color-scheme: light only;
+}
